:wrench: Move notebooks to subfolder

--- a/notebooks/Word2vec-NLP-Tutorial-1.ipynb
+++ b/notebooks/Word2vec-NLP-Tutorial-1.ipynb
@@ -21,7 +21,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train = pd.read_csv('./data/labeledTrainData.tsv', sep='\\t')"
+    "train = pd.read_csv('../data/labeledTrainData.tsv', sep='\\t')"
    ]
   },
   {
@@ -319,7 +319,7 @@
     "X_train_transformed = RawTextTransformer().fit_transform(X_train)\n",
     "\n",
     "# save transformed features to disk\n",
-    "np.save('./data/cleanedTrainData.npy', X_train_transformed)"
+    "np.save('../data/cleanedTrainData.npy', X_train_transformed)"
    ]
   },
   {
@@ -328,7 +328,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train_transformed = np.load('./data/cleanedTrainData.npy')"
+    "X_train_transformed = np.load('../data/cleanedTrainData.npy')"
    ]
   },
   {
@@ -752,7 +752,7 @@
     }
    ],
    "source": [
-    "extra_train = pd.read_csv('./data/unlabeledTrainData.tsv', error_bad_lines=False, sep='\\t')"
+    "extra_train = pd.read_csv('../data/unlabeledTrainData.tsv', error_bad_lines=False, sep='\\t')"
    ]
   },
   {
@@ -775,7 +775,7 @@
     "X_extra_train_transformed = RawTextTransformer().fit_transform(X_extra_train)\n",
     "\n",
     "# save result to disk\n",
-    "np.save('./data/cleanedExtraTrainData.npy', X_extra_train_transformed)"
+    "np.save('../data/cleanedExtraTrainData.npy', X_extra_train_transformed)"
    ]
   },
   {
@@ -784,7 +784,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_extra_train_transformed = np.load('./data/cleanedExtraTrainData.npy')"
+    "X_extra_train_transformed = np.load('../data/cleanedExtraTrainData.npy')"
    ]
   },
   {
@@ -984,7 +984,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test = pd.read_csv('./data/testData.tsv', sep='\\t')"
+    "test = pd.read_csv('../data/testData.tsv', sep='\\t')"
    ]
   },
   {
@@ -1007,7 +1007,7 @@
     "%%script false\n",
     "\n",
     "X_test_transformed = RawTextTransformer().fit_transform(X_test)\n",
-    "np.save('./data/cleanedTestData.npy', X_test_transformed)"
+    "np.save('../data/cleanedTestData.npy', X_test_transformed)"
    ]
   },
   {
@@ -1016,7 +1016,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_test_transformed = np.load('./data/cleanedTestData.npy')"
+    "X_test_transformed = np.load('../data/cleanedTestData.npy')"
    ]
   },
   {
@@ -1055,11 +1055,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "submission = pd.read_csv('./results/sampleSubmission.csv')\n",
+    "submission = pd.read_csv('../results/sampleSubmission.csv')\n",
     "submission['sentiment'] = y_test_pred\n",
     "\n",
     "# achieved only 0.85 when submitted (to be expected from cross validation scores)\n",
-    "submission.to_csv('./results/submission.csv', index=False)"
+    "submission.to_csv('../results/submission.csv', index=False)"
    ]
   },
   {
@@ -1086,7 +1086,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
