:tada: Time to move on

--- a/notebooks/Word2vec-NLP-Tutorial-3.ipynb
+++ b/notebooks/Word2vec-NLP-Tutorial-3.ipynb
@@ -216,7 +216,7 @@
    "source": [
     "batch_size = 32\n",
     "\n",
-    "# find workarounds to speed training\n",
+    "# only achieved ~86% when trained on google colab\n",
     "model.fit(X_train, y_train, batch_size=batch_size, epochs=5, verbose=2)"
    ]
   },
